--- a/main.html
+++ b/main.html
@@ -1,40 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Favorite Holiday</title>
+  <meta charset="UTF-8">
+  <title>Favorite Holiday</title>
 </head>
 <body>
 
-    <!-- Heading -->
-    <h1>Paris, France</h1>
+  <h1>Paris</h1>
+  <br>
+  <p>Paris, the city of lights, is famous for its art, fashion, and culture.</p>
 
-    <!-- Line break -->
-    <br>
+  <h2>Top 5 Attractions</h2>
+  <ol>
+    <li><b>Eiffel Tower</b> - Iconic landmark of Paris</li>
+    <li>Louvre Museum with its <i>Mona Lisa</i></li>
+    <li><b>Notre Dame Cathedral</b></li>
+    <li><i>Sacré-Cœur</i> Basilica</li>
+    <li>Champs-Élysées and <b>Arc de Triomphe</b></li>
+  </ol>
 
-    <!-- Brief overview -->
-    <p>Paris, known as the "City of Light", is famous for its romantic ambiance, rich history, and iconic landmarks like the Eiffel Tower and Louvre Museum. It's a destination that offers art, culture, and exquisite cuisine.</p>
-
-    <!-- Top 5 attractions -->
-    <h2>Top 5 Attractions</h2>
-    <ol>
-        <li><strong>Eiffel Tower</strong> – The symbol of Paris with breathtaking city views.</li>
-        <li><em>Louvre Museum</em> – Home to the world-famous Mona Lisa painting.</li>
-        <li><strong>Notre-Dame Cathedral</strong> – A stunning example of Gothic architecture.</li>
-        <li><em>Montmartre</em> – Famous for the artistic vibe and the Sacré-Cœur Basilica.</li>
-        <li><strong>Champs-Élysées</strong> – Iconic avenue with shopping and cafes.</li>
-    </ol>
-
-    <!-- Must-try foods -->
-    <h2>Must-Try Foods</h2>
-    <ul>
-        <li><strong>Croissants</strong> – Flaky and buttery pastries perfect for breakfast.</li>
-        <li><em>Macarons</em> – Colorful and delicate almond-based sweets.</li>
-        <li><strong>Escargots</strong> – A French delicacy of snails cooked in garlic butter.</li>
-        <li><em>Crepes</em> – Thin pancakes with sweet or savory fillings.</li>
-        <li><strong>Ratatouille</strong> – Traditional vegetable stew full of flavors.</li>
-    </ul>
+  <h2>Must-Try Foods</h2>
+  <ul>
+    <li><b>Croissants</b> and pastries</li>
+    <li><i>Baguettes</i> fresh from the bakery</li>
+    <li><b>Escargots</b> (snails)</li>
+    <li><i>French Cheese</i> varieties</li>
+    <li><b>Crème Brûlée</b> dessert</li>
+  </ul>
 
 </body>
 </html>
